<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:title="@string/filter_by"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom" >

        <menu>
            <item android:id="@+id/room_picker_actions"
                android:title="@string/room" />

            <item android:id="@+id/date_picker_actions"
                android:title="@string/date" />

        </menu>
    </item>
</menu>