...
    <Button
        android:id="@+id/Save_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="Save" />

</androidx.appcompat.widget.LinearLayoutCompat>
