<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="room_numbers">
        <item>Room 1</item>
        <item>Room 2</item>
        <item>Room 3</item>
        <item>Room 4</item>
        <item>Room 5</item>
        <item>Room 6</item>
        <item>Room 7</item>
        <item>Room 8</item>
        <item>Room 9</item>
        <item>Room 10</item>
    </string-array>
</resources>